Security Misconfiguration vulnerability

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,10 @@ DB_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
 DEEPSEEK_API_KEY=you_aint_gon_see_sheet
-XSS_PROTECTION_ENABLED=false
+XSS_PROTECTION_ENABLED=true
+
+# Security Misconfiguration Toggle
+SECURITY_HARDENING_ENABLED=false
+FLASK_SECRET_KEY=please-generate-a-strong-32-character-or-longer-secret-key
+JWT_SECRET_KEY=please-generate-a-strong-32-character-or-longer-jwt-secret
+ALLOWED_CORS_ORIGINS=http://localhost:5000,http://localhost:80
