Add comprehensive demo interface and vulnerability toggle system

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,21 @@ services:
       - DB_PASSWORD=postgres
       - DB_HOST=db
       - DB_PORT=5432
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY:-}
+      # Vulnerability Toggle System
       - XSS_PROTECTION_ENABLED=${XSS_PROTECTION_ENABLED:-false}
       - SECURITY_HARDENING_ENABLED=${SECURITY_HARDENING_ENABLED:-false}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY:-secret123}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-secret123}
       - ALLOWED_CORS_ORIGINS=${ALLOWED_CORS_ORIGINS:-}
+      - SQL_INJECTION_PROTECTION=${SQL_INJECTION_PROTECTION:-false}
+      - AUTHORIZATION_ENABLED=${AUTHORIZATION_ENABLED:-false}
+      - INFORMATION_DISCLOSURE_PROTECTION=${INFORMATION_DISCLOSURE_PROTECTION:-false}
+      - MASS_ASSIGNMENT_PROTECTION=${MASS_ASSIGNMENT_PROTECTION:-false}
+      - SSRF_PROTECTION=${SSRF_PROTECTION:-false}
+      - PASSWORD_HASHING_ENABLED=${PASSWORD_HASHING_ENABLED:-false}
+      - FILE_UPLOAD_VALIDATION=${FILE_UPLOAD_VALIDATION:-false}
+      - AI_PROMPT_INJECTION_PROTECTION=${AI_PROMPT_INJECTION_PROTECTION:-false}
     depends_on:
       - db
     volumes:
